--- a/index.html
+++ b/index.html
@@ -132,22 +132,36 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
-	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Hasin had his paper accepted to IEEE Transactions on Wireless Communications, congratulations! </p>
+	<p style="text-align:justify"><font color="purple"><b> Feb 2024: </b></font> I recently gave a presentation at the <a href="https://www.youtube.com/watch?v=8qQv4KjOw9c">Inland SoCal Climate Action Conference</a> on our lab's efforts for enhancing climate resilience equity.  </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Feb 2024: </b></font> Hasin had his paper <a href="https://basakguler.github.io/SG_TCOM_2024.pdf">Secure Aggregation for Clustered Federated Learning with Passive Adversaries</a>,  accepted to IEEE Transactions on Communications, congratulations! </p>
 
 
 
-	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Xingyu and Hasin had their paper accepted to IEEE Transactions on Information Theory, congratulations! </p>
+
+	<p style="text-align:justify"><font color="purple"><b> Jan 2024: </b></font> I was named a <a href="https://n2women.comsoc.org/awards/rising-stars/2023-rising-stars-in-computer-networking-and-communications/">Rising Star in Computer Networking and Communications</a>! </p>
+
+
+
+
+
+	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Hasin had his paper <a href="https://basakguler.github.io/SG_TWC_2023.pdf">Over-the-air Clustered Federated Learning</a> accepted to IEEE Transactions on Wireless Communications, congratulations! </p>
+
+
+
+	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Xingyu and Hasin had their paper <a href="https://basakguler.github.io/LSG_IT_2023.pdf">Privacy-preserving Collaborative Learning with Linear Communication Complexity</a> accepted to IEEE Transactions on Information Theory, congratulations! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> Nov 2023: </b></font> Hasin has passed his qualifying exam, congratulations! </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> Sep 2023: </b></font> Xingyu and Hasin had  their paper accepted to IEEE Transactions on Communications, congratulations! </p>
+	<p style="text-align:justify"><font color="purple"><b> Sep 2023: </b></font> Xingyu and Hasin had  their paper <a href="https://basakguler.github.io/LSG_TCOM_2023.pdf">SCALR: Communication-Efficient Secure Multi-Party Logistic Regression</a> accepted to IEEE Transactions on Communications, congratulations! </p>
 
 
 
 
-	<p style="text-align:justify"><font color="purple"><b> Aug 2023: </b></font> Yushu had  his first paper accepted to the Asilomar Conference! </p>
+	<p style="text-align:justify"><font color="purple"><b> Aug 2023: </b></font> Yushu had  his first paper <a href="https://basakguler.github.io/Yan-Asilomar23.pdf">Federated Learning for Massive MIMO Power Allocation</a> accepted to the Asilomar Conference! </p>
 
 
 
@@ -166,7 +180,7 @@
 	<p style="text-align:justify"><font color="purple"><b> May 2023: </b></font> <a href="https://cloud.google.com/edu/researchers/innovators"> Google Cloud Research Innovator!</a> </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> April 2023: </b></font> Our group has two papers accepted at <a href="https://isit2023.org/"> ISIT 2023</a>, both strong accepts! Congratulations to Hasin and Xingyu! </p>
+	<p style="text-align:justify"><font color="purple"><b> April 2023: </b></font> Our group has two papers accepted at <a href="https://isit2023.org/"> ISIT 2023</a>, <a href="https://basakguler.github.io/SG_ISIT_2023.pdf">Secure Aggregation for Clustered Federated Learning</a> and <a href="https://basakguler.github.io/LG_ISIT_2023.pdf">Breaking the Quadratic Communication Overhead of Secure Multi-Party Neural Network Training</a>. Congratulations to Hasin and Xingyu! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> March 2023: </b></font> Organizing a special session on federated learning and wireless edge intelligence at <a href="https://www.asilomarsscconf.org/"> Asilomar 2023!</a>   </p>
