--- a/publications.html
+++ b/publications.html
@@ -98,15 +98,19 @@ For a full list of publications please see my <a href="https://scholar.google.co
  <h1>Journal Publications</h1>
  <ol>
 
-
-   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, Privacy-preserving Collaborative Learning with Linear Communication Complexity, IEEE Transactions on Information Theory, Dec. 2023. </li>       
-  <br />
-  
-    <li> Hasin Us Sami, Basak Guler, Over-the-air Clustered Federated Learning, IEEE Transactions on Wireless Communications, Dec. 2023. </li>       
+    <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_TCOM_2024.pdf">Secure Aggregation for Clustered Federated Learning with Passive Adversaries</a>, IEEE Transactions on Communications, Feb. 2024. </li>       
   <br />
  
 
-   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, SCALR: Communication-Efficient Secure Multi-Party Logistic Regression, IEEE Transactions on Communications, Aug. 2023. </li>       
+
+   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/LSG_IT_2023.pdf">Privacy-preserving Collaborative Learning with Linear Communication Complexity</a>, IEEE Transactions on Information Theory, Dec. 2023. </li>       
+  <br />
+  
+    <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_TWC_2023.pdf">Over-the-air Clustered Federated Learning</a>, IEEE Transactions on Wireless Communications, Dec. 2023. </li>       
+  <br />
+ 
+
+   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/LSG_TCOM_2023.pdf">SCALR: Communication-Efficient Secure Multi-Party Logistic Regression</a>, IEEE Transactions on Communications, Aug. 2023. </li>       
   <br />
 
    <li> Jinhyun So, Basak Guler, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2002.04156.pdf">Turbo-Aggregate: Breaking the Quadratic Aggregation Barrier in Secure Federated Learning</a>, IEEE Journal on Selected Areas in Information Theory: Privacy and Security of Information Systems, Jan. 2021. </li>       
@@ -148,28 +152,28 @@ For a full list of publications please see my <a href="https://scholar.google.co
           <ol>
 
 
-   <li> Yushu Yan, Xiangyu Chang, Basak Guler, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, Federated Learning for Massive MIMO Power Allocation, Asilomar Conference on Signals, Systems, and Computers, 2023. </li>       
+   <li> Yushu Yan, Xiangyu Chang, Basak Guler, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, <a href="https://basakguler.github.io/Yan-Asilomar23.pdf">Federated Learning for Massive MIMO Power Allocation</a>, Asilomar Conference on Signals, Systems, and Computers, 2023. </li>       
   <br />
 
 
-   <li> Umit Yigit Basaran, Xingyu Lu, Basak Guler, Beyond Secure Aggregation: Scalable Multi-Round Secure Collaborative Learning, FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities, in conjunction with ICML'2023. </li>       
+   <li> Umit Yigit Basaran, Xingyu Lu, Basak Guler, <a href="https://basakguler.github.io/BLG_FL_ICML_2023.pdf">Beyond Secure Aggregation: Scalable Multi-Round Secure Collaborative Learning</a>, FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities, in conjunction with International Conference on Machine Learning, ICML'2023. </li>       
   <br />
 
-   <li> Xingyu Lu, Basak Guler, Breaking the Quadratic Communication Overhead of Secure Multi-Party Neural Network Training, ISIT International Symposium on Information Theory, ISIT'2023. </li>       
+   <li> Xingyu Lu, Basak Guler, <a href="https://basakguler.github.io/LG_ISIT_2023.pdf">Breaking the Quadratic Communication Overhead of Secure Multi-Party Neural Network Training</a>, ISIT International Symposium on Information Theory, ISIT'2023. </li>       
   <br />
   
-   <li> Hasin Us Sami, Basak Guler, Secure Aggregation for Clustered Federated Learning, ISIT International Symposium on Information Theory, ISIT'2023. </li>       
+   <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_ISIT_2023.pdf">Secure Aggregation for Clustered Federated Learning</a>, ISIT International Symposium on Information Theory, ISIT'2023. </li>       
   <br />
     
 
 
-   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, Dropout-Resilient Secure Multi-Party Collaborative Learning with Linear Communication Complexity, AISTATS International Conference on Artificial Intelligence and Statistics, AISTATS'2023. </li>       
+   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/LSG_ISIT_2023.pdf">Dropout-Resilient Secure Multi-Party Collaborative Learning with Linear Communication Complexity</a>, AISTATS International Conference on Artificial Intelligence and Statistics, AISTATS'2023. </li>       
   <br />
 
    <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, AAAI Conference on Artificial Intelligence, AAAI 2023. </li>       
   <br />
 
-   <li> Irem Ergun, Hasin Us Sami, Basak Guler, Communication-Efficient Secure Aggregation for Federated Learning, IEEE Global Communications Conference, Globecom'22, Rio de Janeiro, Brazil, Dec. 2022. </li>       
+   <li> Irem Ergun, Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/ESG_GLOBECOM_2023.pdf">Communication-Efficient Secure Aggregation for Federated Learning</a>, IEEE Global Communications Conference, Globecom'22, Rio de Janeiro, Brazil, Dec. 2022. </li>       
   <br />
 
 
@@ -185,7 +189,7 @@ For a full list of publications please see my <a href="https://scholar.google.co
   <br />
   
 
-   <li> Hasin Us Sami, Basak Guler, Over-the-air Clustered Federated Learning, International Conference on Acoustics, Speech, and Signal Processing, ICASSP'21. </li>       
+   <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_ICASSP_2021.pdf">Over-the-air Personalized Federated Learning</a>, International Conference on Acoustics, Speech, and Signal Processing, ICASSP'21. </li>       
   <br />
 
 
