--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
 		
 
 
-		<p style="text-align:justify">  I am an Assistant Professor in the Department of Electrical and Computer Engineering  at University of California, Riverside, and a cooperating faculty at the Department of Computer Science and Engineering. 
+		<p style="text-align:justify">  I am an Assistant Professor in the <a href="https://www.ece.ucr.edu">Department of Electrical and Computer Engineering</a>  at University of California, Riverside. I am also an Affiliated Faculty with the <a href="https://www1.cs.ucr.edu">Department of Computer Science and Engineering</a>, and with the <a href="https://datascience.ucr.edu/graduate/computational-data-science">Computational Data Science Program</a>. 
+		I am a member of NC4 (Center for Networked Configurable Command, Control, and Communications) and CRIS (Center for Robotics and Intelligent Systems)  Centers at UCR. I am an Associate Editor for <a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=7693">IEEE Transactions on Wireless Communications</a> in the area of Machine Learning and Artificial Intelligence, and an Editor for <a href="https://www.comsoc.org/publications/journals/ieee-tgcn">IEEE Transactions on Green Communications and Networking</a> in the area of Green Computing and Artificial Intelligence. 
+		I received the <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2144927&HistoricalAwards=false">NSF CAREER Award</a> in 2022. 
 
 		</p> 
 		
@@ -104,7 +106,7 @@
 		
 
 		
-		<p style="text-align:justify">   Our research is on information theory, distributed/federated learning, and trustworthy AI/ML over large-scale networks. We design massive-scale reliable networked information systems with strong information-theoretic guarantees for security, privacy, and sustainability. 
+		<p style="text-align:justify">   Our group's research is on information theory, distributed/federated learning, and trustworthy AI/ML over large-scale networks. We design massive-scale reliable networked information systems with strong information-theoretic guarantees for security, privacy, and sustainability. 
 		</p>
  
 
@@ -131,6 +133,10 @@
 
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+		
+	<p style="text-align:justify"><font color="purple"><b> Mar 2024: </b></font> I will be serving as an Associate Editor for IEEE Transactions on Wireless Communications, in the area of Machine Learning and Artificial Intelligence.  </p>
+
+		
 
 	<p style="text-align:justify"><font color="purple"><b> Feb 2024: </b></font> I recently gave a presentation at the <a href="https://www.youtube.com/watch?v=8qQv4KjOw9c">Inland SoCal Climate Action Conference</a> on our lab's efforts for enhancing climate resilience equity.  </p>
 
@@ -153,7 +159,7 @@
 	<p style="text-align:justify"><font color="purple"><b> Dec 2023: </b></font> Xingyu and Hasin had their paper <a href="https://basakguler.github.io/LSG_IT_2023.pdf">Privacy-preserving Collaborative Learning with Linear Communication Complexity</a> accepted to IEEE Transactions on Information Theory, congratulations! </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> Nov 2023: </b></font> Hasin has passed his qualifying exam, congratulations! </p>
+	<p style="text-align:justify"><font color="purple"><b> Nov 2023: </b></font> Hasin has passed his PhD qualifying exam, congratulations! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> Sep 2023: </b></font> Xingyu and Hasin had  their paper <a href="https://basakguler.github.io/LSG_TCOM_2023.pdf">SCALR: Communication-Efficient Secure Multi-Party Logistic Regression</a> accepted to IEEE Transactions on Communications, congratulations! </p>
