--- a/prospective.html
+++ b/prospective.html
@@ -76,7 +76,7 @@
 <br />		
 
 
-		<p style="text-align:justify"><font color="black"> </font> <b> PhD Students: </b> We generally have 1-2 funded new PhD positions every year for <b>highly motivated students.</b> Our research is at the intersection of information theory, distributed computing, and security/privacy, which requires a strong math background. If your research interests are aligned with our group and you would like to work with us, please apply to the PhD program of the ECE or CSE Departments and send me an e-mail with the title "Prospective Student" along with your CV and research interests. Students who have majored in math with no engineering background are also welcome to apply.   </p>
+		<p style="text-align:justify"><font color="black"> </font> <b> PhD Students: </b> We generally have new PhD positions every year for <b>highly motivated students.</b> Our research is at the intersection of information theory, distributed computing, and security/privacy, which requires a strong math background. If your research interests are aligned with our group and you would like to work with us, please apply to the PhD programs of the Electrical and Computer Engineering (ECE) or Computer Science and Engineering (CSE) Departments and send me an e-mail with the title "Prospective Student" along with your CV and research interests. A prior MS degree is not required to apply for the PhD program. Students who have majored in math with no engineering background are also welcome to apply.   </p>
 		
 
 		
