--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+
+	<p style="text-align:justify"><font color="purple"><b> May 2024: </b></font> Hasin had a new paper accepted to IEEE Transactions on Communications, congratulations! </p>
+
 	
 	
 	<p style="text-align:justify"><font color="purple"><b> April 2024: </b></font> Hasin had two papers accepted to <a href="https://2024.ieee-isit.org/home">IEEE International Symposium on Information Theory (ISIT 2024)</a>, congratulations! </p>
