--- a/index.html
+++ b/index.html
@@ -134,6 +134,17 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
+	<p style="text-align:justify"><font color="purple"><b> Aug 2024: </b></font> Xingyu and Umit had a new paper accepted to IEEE Transactions on Information Theory, congratulations! </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> July 2024: </b></font> Xingyu has passed his qualifying exam, congratulations! </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> June 2024: </b></font> Hasin has received a student travel grant to attend <a href="https://2024.ieee-isit.org/home">IEEE International Symposium on Information Theory (ISIT 2024)</a>, congratulations! </p>
+
+
+
+
 	<p style="text-align:justify"><font color="purple"><b> May 2024: </b></font> Hasin had a new paper accepted to IEEE Transactions on Communications, congratulations! </p>
 
 	
