--- a/publications.html
+++ b/publications.html
@@ -98,6 +98,14 @@ For a full list of publications please see my <a href="https://scholar.google.co
  <h1>Journal Publications</h1>
  <ol>
 
+
+    <li> Xingyu Lu, Umit Yigit Basaran, Basak Guler, Scalable Multi-Round Multi-Party Privacy-Preserving Neural Network Training, IEEE Transactions on Information Theory, accepted Aug. 2024. </li>       
+  <br />
+
+    <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_TCom_2024_sparse.pdf">Secure Gradient Aggregation with Sparsification for Resource-Limited Federated Learning</a>, IEEE Transactions on Communications, Aug. 2024. </li>       
+  <br />
+ 
+
     <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_TCOM_2024.pdf">Secure Aggregation for Clustered Federated Learning with Passive Adversaries</a>, IEEE Transactions on Communications, Feb. 2024. </li>       
   <br />
  
@@ -151,6 +159,13 @@ For a full list of publications please see my <a href="https://scholar.google.co
   <h1>Conference Publications</h1>
           <ol>
 
+
+   <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG2_ISIT_2024.pdf">Secure Submodel Aggregation for Resource-Aware Federated
+Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </li>       
+  <br />
+  
+   <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG1_ISIT_2024.pdf">Sparsity Based Secure Gradient Aggregation for Resource-Constrained Federated Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </li>       
+  <br />  
 
    <li> Yushu Yan, Xiangyu Chang, Basak Guler, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, <a href="https://basakguler.github.io/Yan-Asilomar23.pdf">Federated Learning for Massive MIMO Power Allocation</a>, Asilomar Conference on Signals, Systems, and Computers, 2023. </li>       
   <br />
