--- a/group.html
+++ b/group.html
@@ -104,10 +104,29 @@
 		
 
 	    
+	    <p  </p>
+	    &nbsp
+
+		<p style="text-align:justify;margin-bottom:0.2cm"> Swapneel Sen (2024 - present)   </p>
+		
+
+		<br>
+
+		<h1> <b> MSc Students: </b> </h1>
+		<br />	
 
 
+	    <p  </p>
+	    &nbsp
 
+		<p style="text-align:justify;margin-bottom:0.2cm"> Rahul Rajesh (2024)   </p>
+		
 
+	    <p  </p>
+	    &nbsp
+
+		<p style="text-align:justify;margin-bottom:0.2cm"> Sruthi Suresh (2024)   </p>
+		
 
 
 		</div> <!-- copy -->
