--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
+	<p style="text-align:justify"><font color="purple"><b> Nov 2024: </b></font> Hasin has received the UC Riverside Dissertation Completion Fellowship! </p>
+
+
+
+	<p style="text-align:justify"><font color="purple"><b> Sep 2024: </b></font> Yushu had a new paper accepted to Milcom 2024, congratulations! </p>
+
+
 	<p style="text-align:justify"><font color="purple"><b> Aug 2024: </b></font> Xingyu and Umit had a new paper accepted to IEEE Transactions on Information Theory, congratulations! </p>
 
 
