--- a/publications.html
+++ b/publications.html
@@ -160,6 +160,11 @@ For a full list of publications please see my <a href="https://scholar.google.co
           <ol>
 
 
+
+   <li> Yushu Yan, Xiangyu Chang, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, Basak Guler, <a href="https://basakguler.github.io/Yan-Milcom24.pdf">Clustered Federated Learning for Massive MIMO Power Allocation</a>,  IEEE Military Communications Conference (MILCOM), 2024. </li>       
+  <br />
+
+
    <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG2_ISIT_2024.pdf">Secure Submodel Aggregation for Resource-Aware Federated
 Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </li>       
   <br />
