--- a/publications.html
+++ b/publications.html
@@ -161,6 +161,9 @@ For a full list of publications please see my <a href="https://scholar.google.co
 
 
 
+   <li> Yushu Yan, Basak Guler, Resource-Aware Secure Computation Offloading,  IEEE International Conference on Communications (ICC), 2025. </li>       
+  <br />
+
    <li> Yushu Yan, Xiangyu Chang, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, Basak Guler, <a href="https://basakguler.github.io/Yan-Milcom24.pdf">Clustered Federated Learning for Massive MIMO Power Allocation</a>,  IEEE Military Communications Conference (MILCOM), 2024. </li>       
   <br />
 
