--- a/index.html
+++ b/index.html
@@ -134,11 +134,14 @@
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
 
+	<p style="text-align:justify"><font color="purple"><b> May 2025: </b></font> Umit has a new paper accepted to  <a href="https://icml.cc/"> International Conference on Machine Learning (ICML 2025)</a>, congratulations! </p>
 
-	<p style="text-align:justify"><font color="purple"><b> Feb 2025: </b></font> Xingyu has received the UCR Dissertation Program Fellowship, congratulations! </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> Feb 2025: </b></font> Three new papers accepted to  <a href="https://cvpr.thecvf.com/Conferences/2025"> CVPR 2025</a>, congratulations Hasin, Umit, Swapneel, and all collaborators! </p>
+	<p style="text-align:justify"><font color="purple"><b> March 2025: </b></font> Xingyu has received the UCR Dissertation Program Fellowship, congratulations! </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Feb 2025: </b></font> Three new papers accepted to  <a href="https://cvpr.thecvf.com/Conferences/2025"> IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR 2025)</a>, congratulations Hasin, Umit, Swapneel, and all collaborators! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> Jan 2025: </b></font> Yushu had a new paper accepted to <a href="https://icc2025.ieee-icc.org/">IEEE International  Conference on Communications (ICC 2025)</a>, congratulations! </p>
