--- a/publications.html
+++ b/publications.html
@@ -99,7 +99,7 @@ For a full list of publications please see my <a href="https://scholar.google.co
  <ol>
 
 
-    <li> Xingyu Lu, Umit Yigit Basaran, Basak Guler, Scalable Multi-Round Multi-Party Privacy-Preserving Neural Network Training, IEEE Transactions on Information Theory, accepted Aug. 2024. </li>       
+    <li> Xingyu Lu, Umit Yigit Basaran, Basak Guler, Scalable Multi-Round Multi-Party Privacy-Preserving Neural Network Training, IEEE Transactions on Information Theory, Aug. 2024. </li>       
   <br />
 
     <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_TCom_2024_sparse.pdf">Secure Gradient Aggregation with Sparsification for Resource-Limited Federated Learning</a>, IEEE Transactions on Communications, Aug. 2024. </li>       
@@ -160,8 +160,22 @@ For a full list of publications please see my <a href="https://scholar.google.co
           <ol>
 
 
+   <li> Umit Yigit Basaran, Sk Miraj Ahmed, Amit Roy-Chowdhury, Basak Guler, A Certified Unlearning Approach without Access to Source Data,  International Conference on Machine Learning, ICML 2025. </li>       
+  <br />
 
-   <li> Yushu Yan, Basak Guler, Resource-Aware Secure Computation Offloading,  IEEE International Conference on Communications (ICC), 2025. </li>       
+
+   <li> Hasin Us Sami, Swapneel Sen,  Amit Roy-Chowdhury, Srikanth Krishnamurthy, Basak Guler, Gradient Inversion Attacks on Parameter-Efficient Fine-Tuning,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
+  <br />
+
+   <li> Sk Miraj Ahmed, Umit Yigit Basaran, Dripta S. Raychaudhuri, Arindam Dutta, Rohit Kundu, Fahim Faisal Niloy, Basak Guler, Amit Roy-Chowdhury, Towards Source-Free Machine Unlearning,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
+  <br />
+
+   <li> Xiangyu Chang, Fahim Faisal Niloy, Sk Miraj Ahmed, Srikanth Krishnamurthy, Basak Guler, Ananthram Swami, Samet Oymak, Amit Roy-Chowdhury, AdMiT: Adaptive Multi-Source Tuning in Dynamic Environments,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
+  <br />
+
+
+
+   <li> Yushu Yan, Basak Guler, Resource-Aware Secure Computation Offloading,  IEEE International Conference on Communications, ICC 2025. </li>       
   <br />
 
    <li> Yushu Yan, Xiangyu Chang, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, Basak Guler, <a href="https://basakguler.github.io/Yan-Milcom24.pdf">Clustered Federated Learning for Massive MIMO Power Allocation</a>,  IEEE Military Communications Conference (MILCOM), 2024. </li>       
