--- a/group.html
+++ b/group.html
@@ -77,13 +77,8 @@
 
 		<h1> <b> PhD Students: </b> </h1>
 		<br />	
-		
-		<p style="text-align:justify;margin-bottom:0.2cm"> Hasin Us Sami (2020 - present) </p>
 
 	
-
-	    <p  </p>
-	    &nbsp
 
 		<p style="text-align:justify;margin-bottom:0.2cm"> Yushu Yan  (2021 - present) </p>
 		
@@ -111,21 +106,21 @@
 		
 
 		<br>
-
-		<h1> <b> MSc Students: </b> </h1>
-		<br />	
-
-
-	    <p  </p>
-	    &nbsp
-
-		<p style="text-align:justify;margin-bottom:0.2cm"> Rahul Rajesh (2024)   </p>
 		
+		<h1> <b> Alumni: </b> </h1>
+		<br />	
+		
+		<p style="text-align:justify;margin-bottom:0.2cm"> Hasin Us Sami, 2025, PhD </p>	
+			    <p  </p>
+			    &nbsp	
 
-	    <p  </p>
-	    &nbsp
+		<p style="text-align:justify;margin-bottom:0.2cm"> Rahul Rajesh, 2024, MSc   </p>
+			    <p  </p>
+			    &nbsp
+		
+		<p style="text-align:justify;margin-bottom:0.2cm"> Sruthi Suresh, 2024, MSc   </p>
 
-		<p style="text-align:justify;margin-bottom:0.2cm"> Sruthi Suresh (2024)   </p>
+
 		
 
 
