--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
 		
 
 		
-
-		
-		<p style="text-align:justify">   Our group's research is on information theory, distributed/federated learning, and trustworthy AI/ML over large-scale networks. We design massive-scale reliable networked information systems with strong information-theoretic guarantees for security, privacy, and sustainability. 
+		<p style="text-align:justify">   Our group's research is on information theory and machine learning/unlearning, and trustworthy AI over large-scale networks. 
 		</p>
  
 
@@ -133,6 +131,16 @@
 
 		
 		<p style="font-size:large;"><font color="blue"><b>News:</b></font></p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Jan 2026: </b></font> We have a new paper accepted to <a href="https://virtual.aistats.org/"> AISTATS Annual Conference on Artificial Intelligence and Statistics</a> congratulations Hasin and Swapneel! </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Dec 2025: </b></font> I have been recognized as a <a href="https://infocom2025.ieee-infocom.org/committees/technical-program-committee"> Distinguished TPC member</a> for INFOCOM 2025, based upon ratings by peer TPC members and fairness in review scores.  </p>
+
+
+	<p style="text-align:justify"><font color="purple"><b> Sep 2025: </b></font> Hasin has successfully defended his PhD, congratulations! </p>
+
 
 	<p style="text-align:justify"><font color="purple"><b> May 2025: </b></font> Umit has a new paper accepted to  <a href="https://icml.cc/"> International Conference on Machine Learning (ICML 2025)</a>, congratulations! </p>
 
@@ -232,7 +240,7 @@
 	<p style="text-align:justify"><font color="purple"><b> March 2023: </b></font> Organizing a special session on federated learning and wireless edge intelligence at <a href="https://www.asilomarsscconf.org/"> Asilomar 2023!</a>   </p>
 
 
-	<p style="text-align:justify"><font color="purple"><b> January 2023: </b></font> New paper accepted to <a href="https://aistats.org/aistats2023/"> AISTATS 2023</a>, congratulations Xingyu and Hasin! </p>
+	<p style="text-align:justify"><font color="purple"><b> January 2023: </b></font> New paper accepted to <a href="https://aistats.org/aistats2023/"> AISTATS Annual Conference on Artificial Intelligence and Statistics</a>, congratulations Xingyu and Hasin! </p>
 
 
 	<p style="text-align:justify"><font color="purple"><b> December 2022: </b></font> Our paper <a href="https://arxiv.org/pdf/2106.03328.pdf"> Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a> has been accepted to  <a href="https://aaai.org/Conferences/AAAI-23/" > AAAI 2023</a>! </p>
