--- a/publications.html
+++ b/publications.html
@@ -159,21 +159,28 @@ For a full list of publications please see my <a href="https://scholar.google.co
   <h1>Conference Publications</h1>
           <ol>
 
+   <li> Hasin Us Sami, Swapneel Sen,  Basak Guler, MineGrad: Gradient Inversion Attacks on LoRA Fine-Tuning, Annual Conference on Artificial Intelligence and Statistics, AISTATS'2026. </li>       
+  <br />
 
-   <li> Umit Yigit Basaran, Sk Miraj Ahmed, Amit Roy-Chowdhury, Basak Guler, A Certified Unlearning Approach without Access to Source Data,  International Conference on Machine Learning, ICML 2025. </li>       
+   <li> T. Alanazi, A. Fahim, M. Ibnath, B. Guler, A. R. Chowdhury, A. Swami, E. E. Papalexakis, S. V. Krishnamurthy, FedBand: Adaptive Federated Learning Under Strict Bandwidth Constraints. 2025 34th International Conference on Computer Communications and Networks (ICCCN), 2025.  </li>  
+  <br />
+  
+   <li> Xiangyu Chang, Sk Miraj Ahmed, Srikanth V. Krishnamurthy, Basak Guler, Ananthram Swami, Samet Oymak, Amit K. Roy-Chowdhury, FLASH: Federated Learning Across Simultaneous Heterogeneities, IEEE Military Communications Conference (MILCOM), 2025. </li>       
   <br />
 
 
-   <li> Hasin Us Sami, Swapneel Sen,  Amit Roy-Chowdhury, Srikanth Krishnamurthy, Basak Guler, Gradient Inversion Attacks on Parameter-Efficient Fine-Tuning,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
-  <br />
-
-   <li> Sk Miraj Ahmed, Umit Yigit Basaran, Dripta S. Raychaudhuri, Arindam Dutta, Rohit Kundu, Fahim Faisal Niloy, Basak Guler, Amit Roy-Chowdhury, Towards Source-Free Machine Unlearning,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
-  <br />
-
-   <li> Xiangyu Chang, Fahim Faisal Niloy, Sk Miraj Ahmed, Srikanth Krishnamurthy, Basak Guler, Ananthram Swami, Samet Oymak, Amit Roy-Chowdhury, AdMiT: Adaptive Multi-Source Tuning in Dynamic Environments,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
+   <li> Umit Yigit Basaran, Sk Miraj Ahmed, Amit Roy-Chowdhury, Basak Guler, <a href="https://basakguler.github.io/Unlearning-ICML25.pdf">A Certified Unlearning Approach without Access to Source Data</a>,  International Conference on Machine Learning, ICML 2025. </li>       
   <br />
 
 
+   <li> Hasin Us Sami, Swapneel Sen,  Amit Roy-Chowdhury, Srikanth Krishnamurthy, Basak Guler, <a href="https://basakguler.github.io/GradientInversion-CVPR25.pdf">Gradient Inversion Attacks on Parameter-Efficient Fine-Tuning</a>,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
+  <br />
+
+   <li> Sk Miraj Ahmed, Umit Yigit Basaran, Dripta S. Raychaudhuri, Arindam Dutta, Rohit Kundu, Fahim Faisal Niloy, Basak Guler, Amit Roy-Chowdhury, <a href="https://basakguler.github.io/Unlearning-CVPR25.pdf">Towards Source-Free Machine Unlearning</a>,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
+  <br />
+
+   <li> Xiangyu Chang, Fahim Faisal Niloy, Sk Miraj Ahmed, Srikanth Krishnamurthy, Basak Guler, Ananthram Swami, Samet Oymak, Amit Roy-Chowdhury, <a href="https://basakguler.github.io/Admit-CVPR25.pdf">AdMiT: Adaptive Multi-Source Tuning in Dynamic Environments</a>,  IEEE/CVF Conference on Computer Vision and Pattern Recognition, CVPR 2025. </li>       
+  <br />
 
    <li> Yushu Yan, Basak Guler, Resource-Aware Secure Computation Offloading,  IEEE International Conference on Communications, ICC 2025. </li>       
   <br />
@@ -181,9 +188,7 @@ For a full list of publications please see my <a href="https://scholar.google.co
    <li> Yushu Yan, Xiangyu Chang, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, Basak Guler, <a href="https://basakguler.github.io/Yan-Milcom24.pdf">Clustered Federated Learning for Massive MIMO Power Allocation</a>,  IEEE Military Communications Conference (MILCOM), 2024. </li>       
   <br />
 
-
-   <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG2_ISIT_2024.pdf">Secure Submodel Aggregation for Resource-Aware Federated
-Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </li>       
+   <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG2_ISIT_2024.pdf">Secure Submodel Aggregation for Resource-Aware Federated Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </li>       
   <br />
   
    <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG1_ISIT_2024.pdf">Sparsity Based Secure Gradient Aggregation for Resource-Constrained Federated Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </li>       
@@ -191,7 +196,6 @@ Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </l
 
    <li> Yushu Yan, Xiangyu Chang, Basak Guler, Amit Roy-Chowdhury, Srikanth Krishnamurthy, Ananthram Swami, <a href="https://basakguler.github.io/Yan-Asilomar23.pdf">Federated Learning for Massive MIMO Power Allocation</a>, Asilomar Conference on Signals, Systems, and Computers, 2023. </li>       
   <br />
-
 
    <li> Umit Yigit Basaran, Xingyu Lu, Basak Guler, <a href="https://basakguler.github.io/BLG_FL_ICML_2023.pdf">Beyond Secure Aggregation: Scalable Multi-Round Secure Collaborative Learning</a>, FL-ICML Workshop on Federated Learning and Analytics in Practice: Algorithms, Systems, Applications, and Opportunities, in conjunction with International Conference on Machine Learning, ICML'2023. </li>       
   <br />
@@ -202,9 +206,7 @@ Learning</a>, ISIT International Symposium on Information Theory, ISIT'2024. </l
    <li> Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/SG_ISIT_2023.pdf">Secure Aggregation for Clustered Federated Learning</a>, ISIT International Symposium on Information Theory, ISIT'2023. </li>       
   <br />
     
-
-
-   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/LSG_ISIT_2023.pdf">Dropout-Resilient Secure Multi-Party Collaborative Learning with Linear Communication Complexity</a>, AISTATS International Conference on Artificial Intelligence and Statistics, AISTATS'2023. </li>       
+   <li> Xingyu Lu, Hasin Us Sami, Basak Guler, <a href="https://basakguler.github.io/LSG_ISIT_2023.pdf">Dropout-Resilient Secure Multi-Party Collaborative Learning with Linear Communication Complexity</a>, Annual Conference on Artificial Intelligence and Statistics, AISTATS'2023. </li>       
   <br />
 
    <li> Jinhyun So, Ramy E. Ali, Basak Guler, Jiantao Jiao, A. Salman Avestimehr, <a href="https://arxiv.org/pdf/2106.03328.pdf">Securing Secure Aggregation: Mitigating Multi-Round Privacy Leakage in Federated Learning</a>, AAAI Conference on Artificial Intelligence, AAAI 2023. </li>       
